# parrotflume

./: README.md  parrotflume.config.toml  pyproject.toml  requirements.txt
src/parrotflume/: __init__.py  __main__.py  fancy.py  functions.py  tools.py
tests/: test_functions.py
